--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 body {
   background: rgb(128, 115, 115);
+  font-family: "Montserrat", sans-serif;
+  color: white;
 }
 
 header {
@@ -26,4 +28,10 @@ nav {
 
 .hamburger-class {
   fill: #1b1b1b;
+}
+
+article {
+  height: 40vh;
+  background: url("./images/main-photo2.jpg") center/cover no-repeat border-box;
+  background-size: cover;
 }
