--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ form {
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  border: 1px solid #1b1b1b;
+  border: 1px solid #d1d1d1;
   border-radius: 5px;
   background: #c5b598;
 }
@@ -90,7 +90,7 @@ select,
 option {
   width: 70%;
   height: 2.4rem;
-  border: 1px solid gray;
+  border: 1px solid #d1d1d1;
   border-radius: 5px;
   outline: none;
   font-size: 1rem;
@@ -99,7 +99,7 @@ option {
 }
 
 .rooms-bathrooms {
-  border: 1px solid gray;
+  border: 1px solid #d1d1d1;
   width: 70%;
   display: flex;
   align-items: center;
@@ -114,14 +114,22 @@ option {
   height: 100%;
   background: #ffffff;
   border: none;
-  border-left-style: 1px solid gray;
+  border-left-style: 1px solid #d1d1d1;
   outline: none;
   color: #1b1b1b;
   font-weight: bold;
   font-size: 1rem;
 }
 
-.rooms-bathrooms span {
+.rooms-bathrooms .btn-left {
+  border-right: 1px solid #d1d1d1;
+}
+
+.rooms-bathrooms .btn-right {
+  border-left: 1px solid #d1d1d1;
+}
+
+.rooms-bathrooms .text-between-btn {
   background: #ffffff;
   width: 100%;
   height: 100%;
@@ -130,6 +138,7 @@ option {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 !important;
 }
 
 #numbers {
